examples/python-web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: python-sample-app-demo:v1
        volumeMounts: # Here we are reading from the volume mount
          - name: db-secrets
            mountPath: /db-secrets # Inside the kubernetes pod, on which folder we want to mount it 
        ports:
        - containerPort: 8000
      volumes: # Here we are creating a volume  
        - name: db-secrets
          secret: 
            secretName: test-secret
