examples/python-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-django-sample-app
  # name: meow-svc
spec:
  type: NodePort
  selector:
    app: sample-python-app
  ports:
    - port: 80
      targetPort: 8000 # It means the port on which our application is running 
      # nodePort: 30007

      # curl -L http://10.104.38.64:80/demo
